...
/* Class = "NSMenuItem"; title = "Open URL…"; ObjectID = "0m7-3r-twH"; */
"0m7-3r-twH.title" = "Open URL…";

/* Class = "NSMenu"; title = "Subtitle"; ObjectID = "16p-PA-x34"; */
"16p-PA-x34.title" = "Subtitle";

/* Class = "NSMenuItem"; title = "Normal Size"; ObjectID = "1UK-8n-QPP"; */
"1UK-8n-QPP.title" = "Normal Size";

/* Class = "NSMenu"; title = "Audio Device"; ObjectID = "2Dp-Ol-Zcf"; */
"2Dp-Ol-Zcf.title" = "Audio Device";

/* Class = "NSMenuItem"; title = "Jump to Beginning"; ObjectID = "2Ya-3g-1hy"; */
...
/* Class = "NSMenu"; title = "Video Track"; ObjectID = "FTu-CF-O0R"; */
"FTu-CF-O0R.title" = "Video Track";

/* Class = "NSMenuItem"; title = "Chapters"; ObjectID = "Fal-I4-PZk"; */
"Fal-I4-PZk.title" = "Chapters";

/* Class = "NSMenu"; title = "Playback"; ObjectID = "GEO-Iw-cKr"; */
"GEO-Iw-cKr.title" = "Playback";

/* Class = "NSMenuItem"; title = "Audio Track"; ObjectID = "GF1-xB-KcA"; */
"GF1-xB-KcA.title" = "Audio Track";

/* Class = "NSMenuItem"; title = "Next Media"; ObjectID = "GR6-4V-lRT"; */
...
/* Class = "NSMenuItem"; title = "Crop"; ObjectID = "Gqg-wU-RRo"; */
"Gqg-wU-RRo.title" = "Crop";

/* Class = "NSMenuItem"; title = "Reset Audio Delay"; ObjectID = "H3d-jR-YCr"; */
"H3d-jR-YCr.title" = "Reset Audio Delay";

/* Class = "NSMenuItem"; title = "Video"; ObjectID = "H8h-7b-M4v"; */
"H8h-7b-M4v.title" = "Video";

/* Class = "NSMenuItem"; title = "Double Size"; ObjectID = "Hal-18-Tnf"; */
"Hal-18-Tnf.title" = "Double Size";

/* Class = "NSMenuItem"; title = "Speed Down to 0.5x"; ObjectID = "HsE-LN-Nd6"; */
"HsE-LN-Nd6.title" = "Speed Down to 0.5x";

/* Class = "NSMenu"; title = "Video"; ObjectID = "HyV-fh-RgO"; */
...
/* Class = "NSMenu"; title = "Audio"; ObjectID = "sW8-ri-eA5"; */
"sW8-ri-eA5.title" = "Audio";

/* Class = "NSMenuItem"; title = "Cycle Subtitles"; ObjectID = "sgu-dK-IGE"; */
"sgu-dK-IGE.title" = "Cycle Subtitles";

/* Class = "NSMenuItem"; title = "Half Size"; ObjectID = "snW-S8-Cw5"; */
"snW-S8-Cw5.title" = "Half Size";

/* Class = "NSMenuItem"; title = "Copy"; ObjectID = "tH0-KL-c9V"; */
"tH0-KL-c9V.title" = "Copy";

/* Class = "NSMenuItem"; title = "Open Recent"; ObjectID = "tXI-mr-wws"; */
...
